--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 JWT_SECRET=your_jwt_secret
 SERVICE_ROLE_SECRET=your_service_role_secret
 
+# S3 Connection
+ENDPOINT=
+REGION=
+
 # Expo React Native (mobility)
 EXPO_PUBLIC_SUPABASE_URL=your_expo_supabase_url
 EXPO_PUBLIC_SUPABASE_ANON_KEY=your_expo_supabase_anon_key
