--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "blink-as-a-service-app",
+  "name": "blink-as-a-service-dapp",
   "description": "BARK Blink is a comprehensive decentralized application (dApp) for managing token interactions on the Solana blockchain. This service enables users to easily create, transfer, and manage SPL tokens, NFTs, CNFTs, airdrops, and on-chain transactions with a simple, user-friendly interface. Built for seamless interaction with Solana's infrastructure, BARK Blink simplifies the process of sending digital assets, performing airdrops, managing wallet-to-wallet transactions, and participating in DeFi activities.",
   "author": "BARK Protocol",
-  "version": "0.1.3",
+  "version": "0.1.4",
   "type": "module",
   "private": true,
   "engines": {
@@ -24,16 +24,15 @@
   },
   "dependencies": {
     "@coral-xyz/anchor": "^0.30.1",
-    "@hookform/resolvers": "^3.9.0",
-    "@jup-ag/api": "^6.0.29",
-    "@jup-ag/core": "4.0.0-beta.21",
+    "@hookform/resolvers": "^3.9.1",
+    "@jup-ag/api": "^6.0.30",
     "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-bubblegum": "^4.2.1",
     "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
@@ -44,14 +43,14 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-hover-card": "^1.1.2",
-    "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-menubar": "^1.1.2",
     "@radix-ui/react-navigation-menu": "^1.2.1",
     "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-radio-group": "^1.2.1",
-    "@radix-ui/react-scroll-area": "^1.2.0",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
@@ -60,60 +59,60 @@
     "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-toggle-group": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@solana/actions": "^1.6.5",
+    "@radix-ui/react-tooltip": "^1.1.4",
+    "@solana/actions": "^1.6.6",
     "@solana/pay": "^0.2.5",
-    "@solana/spl-token": "^0.4.8",
-    "@solana/spl-token-metadata": "^0.1.5",
+    "@solana/spl-token": "^0.4.9",
+    "@solana/spl-token-metadata": "^0.1.6",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
     "@solana/wallet-adapter-wallets": "^0.19.32",
-    "@solana/web3.js": "^1.95.3",
-    "@stripe/react-stripe-js": "^2.8.1",
-    "@stripe/stripe-js": "^4.7.0",
-    "@supabase/supabase-js": "^2.45.4",
+    "@solana/web3.js": "^1.95.5",
+    "@stripe/react-stripe-js": "^2.9.0",
+    "@stripe/stripe-js": "^4.10.0",
+    "@supabase/supabase-js": "^2.46.1",
     "@tanstack/react-query": "^4.36.1",
-    "@upstash/redis": "^1.34.2",
+    "@upstash/redis": "^1.34.3",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
-    "chai": "^5.1.1",
+    "chai": "^5.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.0.4",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
-    "embla-carousel-react": "^8.3.0",
+    "embla-carousel-react": "^8.5.1",
     "encoding": "^0.1.13",
-    "framer-motion": "^11.11.1",
-    "jose": "^5.9.3",
+    "framer-motion": "^11.11.17",
+    "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
-    "mocha": "^10.7.3",
-    "next": "14.2.13",
-    "next-auth": "^4.24.8",
+    "mocha": "^10.8.2",
+    "next": "^15.0.3",
+    "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
-    "pino-pretty": "^11.2.2",
-    "react": "^18.3.1",
-    "react-day-picker": "^9.1.3",
-    "react-dom": "^18.3.1",
-    "react-dropzone": "^14.2.9",
-    "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.53.0",
+    "pino-pretty": "^11.3.0",
+    "react": "19.0.0-rc-fb9a90fa48-20240614",
+    "react-day-picker": "^9.3.2",
+    "react-dom": "19.0.0-rc-fb9a90fa48-20240614",
+    "react-dropzone": "^14.3.5",
+    "react-error-boundary": "^4.1.2",
+    "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
-    "react-toastify": "^10.0.5",
-    "recharts": "^2.12.7",
-    "sonner": "^1.5.0",
+    "react-toastify": "^10.0.6",
+    "recharts": "^2.13.3",
+    "sonner": "^1.7.0",
     "stripe": "^16.12.0",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vaul": "^0.9.9",
-    "web3": "^4.13.0",
+    "web3": "^4.15.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
@@ -130,12 +129,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^14.3.1",
     "@types/bcryptjs": "^2.4.6",
-    "@types/jest": "^29.5.13",
+    "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
-    "@types/lodash": "^4.17.10",
-    "@types/node": "^20.16.11",
-    "@types/react": "^18.3.11",
-    "@types/react-dom": "^18.3.0",
+    "@types/lodash": "^4.17.13",
+    "@types/node": "^20.17.6",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
@@ -145,24 +144,23 @@
     "eslint-plugin-storybook": "^0.6.15",
     "husky": "^8.0.3",
     "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "lint-staged": "^13.3.0",
-    "postcss": "^8.4.47",
-    "prettier": "^2.8.8",
-    "prisma": "^5.20.0",
-    "storybook": "^7.6.20",
-    "tailwindcss": "^3.4.13",
+    "lint-staged": "^14.0.1",
+    "postcss": "^8.4.49",
+    "prettier": "^3.3.3",
+    "prettier-plugin-tailwindcss": "^0.5.14",
+    "prisma": "^5.22.0",
+    "storybook-addon-next": "^1.8.0",
+    "tailwindcss": "^3.4.15",
     "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "prettier --write"
-    ],
-    "*.{json,md}": [
-      "prettier --write"
-    ]
+  "peerDependencies": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.0.0",
+    "typescript": "^5.0.0"
+  },
+  "overrides": {
+    "react-is": "^19.0.0-beta-26f2496093-20240514"
   }
 }
