--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-accordion": "^1.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-aspect-ratio": "^1.1.0",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
@@ -52,6 +53,7 @@
     "@radix-ui/react-radio-group": "^1.2.1",
     "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slider": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-switch": "^1.1.1",
@@ -81,12 +83,13 @@
     "chai": "^5.1.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.4",
+    "cmdk": "^1.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
     "encoding": "^0.1.13",
     "framer-motion": "^11.11.17",
+    "input-otp": "^1.4.1",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
@@ -97,13 +100,14 @@
     "next-themes": "^0.3.0",
     "pino-pretty": "^11.3.0",
     "react": "19.0.0-rc-fb9a90fa48-20240614",
-    "react-day-picker": "^9.3.2",
+    "react-day-picker": "^8.10.1",
     "react-dom": "19.0.0-rc-fb9a90fa48-20240614",
     "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-resizable-panels": "^2.1.7",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
