--- a/package.json
+++ b/package.json
@@ -26,12 +26,12 @@
     "@coral-xyz/anchor": "^0.30.1",
     "@hookform/resolvers": "^3.9.1",
     "@jup-ag/api": "^6.0.30",
-    "@metaplex-foundation/js": "^0.20.1",
     "@metaplex-foundation/mpl-bubblegum": "^4.2.1",
     "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@nextui-org/react": "^2.4.8",
     "@prisma/client": "^5.22.0",
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-accordion": "^1.2.1",
@@ -73,22 +73,22 @@
     "@solana/web3.js": "^1.95.5",
     "@stripe/react-stripe-js": "^2.9.0",
     "@stripe/stripe-js": "^4.10.0",
-    "@supabase/supabase-js": "^2.46.1",
+    "@supabase/supabase-js": "^2.46.2",
     "@tanstack/react-query": "^4.36.1",
     "@upstash/redis": "^1.34.3",
-    "axios": "^1.7.7",
+    "axios": "^1.7.8",
     "bcryptjs": "^2.4.3",
     "bip39": "^3.1.0",
     "bs58": "^6.0.0",
     "chai": "^5.1.2",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.5.1",
     "encoding": "^0.1.13",
-    "framer-motion": "^11.11.17",
+    "framer-motion": "^11.12.0",
     "input-otp": "^1.4.1",
     "jose": "^5.9.6",
     "jsonwebtoken": "^9.0.2",
@@ -107,12 +107,13 @@
     "react-hook-form": "^7.53.2",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
+    "react-query": "^3.39.3",
     "react-resizable-panels": "^2.1.7",
     "react-toastify": "^10.0.6",
     "recharts": "^2.13.3",
     "sonner": "^1.7.0",
     "stripe": "^16.12.0",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "uuid": "^10.0.0",
     "vaul": "^0.9.9",
@@ -136,7 +137,7 @@
     "@types/jest": "^29.5.14",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/lodash": "^4.17.13",
-    "@types/node": "^20.17.6",
+    "@types/node": "^20.17.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/uuid": "^9.0.8",
@@ -150,13 +151,13 @@
     "jest": "^29.7.0",
     "lint-staged": "^14.0.1",
     "postcss": "^8.4.49",
-    "prettier": "^3.3.3",
+    "prettier": "^3.4.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
     "prisma": "^5.22.0",
     "storybook-addon-next": "^1.8.0",
     "tailwindcss": "^3.4.15",
     "ts-jest": "^29.2.5",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.2"
   },
   "peerDependencies": {
     "react": "^19.0.0",
