--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@solana/pay": "^0.2.5",
     "@solana/spl-token": "^0.4.9",
     "@solana/spl-token-metadata": "^0.1.6",
+    "@solana/spl-token-registry": "^0.2.4574",
     "@solana/wallet-adapter-base": "^0.9.23",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
@@ -99,6 +100,7 @@
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.16",
+    "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
     "react": "19.0.0-rc-fb9a90fa48-20240614",
     "react-day-picker": "^8.10.1",
