--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blink-as-a-service-dapp",
-  "description": "BARK Blink is a comprehensive decentralized application (dApp) for managing token interactions on the Solana blockchain. This service enables users to easily create, transfer, and manage SPL tokens, NFTs, CNFTs, airdrops, and on-chain transactions with a simple, user-friendly interface. Built for seamless interaction with Solana's infrastructure, BARK Blink simplifies the process of sending digital assets, performing airdrops, managing wallet-to-wallet transactions, and participating in DeFi activities.",
+  "name": "blink-as-a-service-platform",
+  "description": "BARK Blink is a comprehensive decentralized application (dApp) for managing SPL tokens interactions on the Solana blinks and blockchain. This service enables users to easily create, transfer, and manage SPL tokens, NFTs, CNFTs, airdrops, and on-chain transactions with a simple, user-friendly interface. Built for seamless interaction with Solana's infrastructure, BARK Blink simplifies the process of sending digital assets, performing airdrops, managing wallet-to-wallet transactions, and participating in DeFi activities.",
   "author": "BARK Protocol",
   "version": "0.1.4",
   "type": "module",
@@ -27,6 +27,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@jup-ag/api": "^6.0.30",
     "@metaplex-foundation/mpl-bubblegum": "^4.2.1",
+    "@metaplex-foundation/mpl-core": "^1.1.1",
     "@metaplex-foundation/mpl-token-metadata": "^2.13.0",
     "@metaplex-foundation/umi": "^0.9.2",
     "@metaplex-foundation/umi-bundle-defaults": "^0.9.2",
@@ -96,15 +97,15 @@
     "lodash": "^4.17.21",
     "lucide-react": "^0.445.0",
     "mocha": "^10.8.2",
-    "next": "^15.0.3",
+    "next": "^15.1.0",
     "next-auth": "^4.24.10",
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.16",
     "pino": "^9.5.0",
     "pino-pretty": "^11.3.0",
-    "react": "19.0.0-rc-fb9a90fa48-20240614",
+    "react": "19.0.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "19.0.0-rc-fb9a90fa48-20240614",
+    "react-dom": "19.0.0",
     "react-dropzone": "^14.3.5",
     "react-error-boundary": "^4.1.2",
     "react-hook-form": "^7.53.2",
@@ -167,8 +168,5 @@
     "react-dom": "^19.0.0",
     "tailwindcss": "^3.0.0",
     "typescript": "^5.0.0"
-  },
-  "overrides": {
-    "react-is": "^19.0.0-beta-26f2496093-20240514"
   }
 }
