--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "critters": "^0.0.25",
     "crypto-js": "^4.2.0",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.5.1",
     "encoding": "^0.1.13",
     "framer-motion": "^11.12.0",
